pet-race-devops/k8s/pet-race-ui/pet-race-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-race-nginx
  namespace: pet-race-ui
  labels:
    app: apollo-web
    tier: frontend
spec:
  type: LoadBalancer
  loadBalancerIP: "23.251.150.137"
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  selector:
    app: pet-race-web
    tier: frontend
