pet-race-devops/k8s/pet-race-ui/pet-race-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-race-ui
  namespace: pet-race-ui
  labels:
    app: pet-race-ui
    tier: frontend
spec:
  ports:
    - port: 8080
  selector:
    app: pet-race-ui
    tier: frontend
