pet-race-devops/k8s/pet-race-ui/pet-race-ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: pet-race-nginx
    servicePort: 30565
