pet-race-devops/k8s/pet-race-ui/pet-race-ingress.yaml
# not working with demo, does not like over 1k in server
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pet-race-ui
  # annotations:
  #  kubernetes.io/ingress.allowHTTP: "false"
spec:
  tls:
  - secretName: pet-race-tls
  backend:
    serviceName: pet-race-nginx
    servicePort: 30565
